--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAAS MODERN INT'L GROUPS OF SCHOOLS</title>
+    <meta name="description" content="MAAS MODERN INT'L GROUPS OF SCHOOLS: Your premier choice for international education in Ivory Coast and Nigeria. Discover excellence, dedicated staff, and a holistic, government-approved curriculum." />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
