--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore MAAS MODERN INT'L GROUPS OF SCHOOLS' academics, integrated Nigerian, British, and Ghanaian curricula, mission, and admissions process. Government approved institution shaping future leaders." />
     <title>Academics & Admissions - MAAS MODERN INT'L GROUPS OF SCHOOLS</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
