--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="View the vibrant school life, state-of-the-art facilities, and student success moments in the official gallery of MAAS Modern Int’l Groups of Schools.">
     <title>Gallery - MAAS MODERN INT'L GROUPS OF SCHOOLS</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
