--- a/index2.html
+++ b/index2.html
@@ -434,7 +434,7 @@
                         <i class="fas fa-phone text-2xl text-burnt-orange mt-1 flex-shrink-0 mr-4"></i>
                         <div>
                             <h4 class="font-semibold text-lg">Call Us</h4>
-                            <p class="text-pure-white/80 text-sm"><a href="tel:+18005551234" class="hover:underline">**+1 (800) 555-1234**</a> (Admissions)</p>
+                            <p class="text-pure-white/80 text-sm"><a href="tel:+2250555907013" class="hover:underline">+2250555907013</a> (Admissions)</p>
                         </div>
                     </div>
 
@@ -442,7 +442,7 @@
                         <i class="fas fa-envelope text-2xl text-burnt-orange mt-1 flex-shrink-0 mr-4"></i>
                         <div>
                             <h4 class="font-semibold text-lg">Email Us</h4>
-                            <p class="text-pure-white/80 text-sm"><a href="mailto:mass@gmail.com" class="hover:underline">**mass@gmail.com**</a></p>
+                            <p class="text-pure-white/80 text-sm"><a href="mailto:maasinternational@gmail.com" class="hover:underline">maasinternational@gmail.com</a></p>
                         </div>
                     </div>
 
