--- a/index3.html
+++ b/index3.html
@@ -283,70 +283,70 @@
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 0.6s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950747239.jpg" alt="Teacher explaining to students" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay">Focused Learning</div>
+                        <div class="caption-overlay"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 0.7s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950733899.jpg" alt="Students writing on whiteboard" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Interactive Whiteboard</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 0.8s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950714884.jpg" alt="Teacher reading to children" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Early Years Reading</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 0.9s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950697709.jpg" alt="Group discussion" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Group Discussion</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.0s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950688202.jpg" alt="Art class painting" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Artistic Expression</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.1s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950667414.jpg" alt="Students raising hands" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Engaged Students</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.2s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950642751.jpg" alt="Library reading session" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Library Time</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.3s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950630980.jpg" alt="Practical geography class" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay">Practical Geography</div>
+                        <div class="caption-overlay"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.4s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950602015.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Making Notes</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.5s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950584625.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Mathematical Thinking</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
@@ -354,14 +354,14 @@
                   <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.4s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950602015.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Making Notes</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.5s;">
                     <div class="gallery-card aspect-square">
                         <img src="images/1761950584625.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
-                        <div class="caption-overlay-light">Mathematical Thinking</div>
+                        <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
@@ -403,7 +403,7 @@
                         <i class="fas fa-phone text-2xl text-burnt-orange mt-1 flex-shrink-0 mr-4"></i>
                         <div>
                             <h4 class="font-semibold text-lg">Call Us</h4>
-                            <p class="text-pure-white/80 text-sm"><a href="tel:+18005551234" class="hover:underline">**+1 (800) 555-1234**</a> (Admissions)</p>
+                            <p class="text-pure-white/80 text-sm"><a href="tel:+2250555907013" class="hover:underline">+2250555907013</a> (Admissions)</p>
                         </div>
                     </div>
 
@@ -411,7 +411,7 @@
                         <i class="fas fa-envelope text-2xl text-burnt-orange mt-1 flex-shrink-0 mr-4"></i>
                         <div>
                             <h4 class="font-semibold text-lg">Email Us</h4>
-                            <p class="text-pure-white/80 text-sm"><a href="mailto:mass@gmail.com" class="hover:underline">**mass@gmail.com**</a></p>
+                            <p class="text-pure-white/80 text-sm"><a href="mailto:maasinternational@gmail.com" class="hover:underline">maasinternational@gmail.com</a></p>
                         </div>
                     </div>
 
