--- a/index3.html
+++ b/index3.html
@@ -203,7 +203,7 @@
                 </div>
                 
                 <div class="mt-16 h-[50vh] rounded-xl shadow-2xl overflow-hidden animate-fadeInUp" style="animation-delay: 1.3s;">
-                    <img src="images/1761950772378.jpg" alt="Aerial view of the school compound and playing field." class="w-full h-full object-cover">
+                    <img src="images/IMG-20251102-WA0218.jpg" alt="Aerial view of the school compound and playing field." class="w-full h-full object-cover">
                 </div>
                 
             </div>
@@ -353,14 +353,70 @@
 
                   <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.4s;">
                     <div class="gallery-card aspect-square">
-                        <img src="images/1761950602015.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
+                        <img src="images/IMG-20251102-WA0211.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
                         <div class="caption-overlay-light"></div>
                     </div>
                 </div>
 
                 <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.5s;">
                     <div class="gallery-card aspect-square">
-                        <img src="images/1761950584625.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
+                        <img src="images/IMG-20251102-WA0212.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                                  <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.4s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0213.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.5s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0214.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                                  <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.4s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0215.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.5s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0216.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                                  <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.4s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0217.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.5s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0218.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                                  <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.4s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0219.jpg" alt="Students writing notes" class="gallery-image object-cover h-full w-full">
+                        <div class="caption-overlay-light"></div>
+                    </div>
+                </div>
+
+                <div class="overflow-hidden rounded-lg shadow-xl group hover:shadow-2xl transition duration-500 animate-fadeInUp" style="animation-delay: 1.5s;">
+                    <div class="gallery-card aspect-square">
+                        <img src="images/IMG-20251102-WA0220.jpg" alt="Maths lesson" class="gallery-image object-cover h-full w-full">
                         <div class="caption-overlay-light"></div>
                     </div>
                 </div>
